added a few gems

--- a/project4_rails/blogger/app/views/layouts/application.html.erb
+++ b/project4_rails/blogger/app/views/layouts/application.html.erb
@@ -12,5 +12,9 @@
 
 <%= yield %>
 
+<% if !current_page?(articles_path) %>
+	<%= link_to "<< Back to Articles List", articles_path %>
+<% end %>
+
 </body>
 </html>
