--- a/project4_rails/blogger/app/views/tags/show.html.erb
+++ b/project4_rails/blogger/app/views/tags/show.html.erb
@@ -5,5 +5,4 @@
 		<li><%= link_to article.title, article_path(article) %></li>
 	<% end %>
 </ul> <br/>
-<%= link_to "<< Back to Articles List", articles_path %>
-<%= link_to "delete", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %>
+<%= link_to "delete", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %> <br/><br/>
